feat(DataCombobox): change new Long to Long.valueOf
Change new Long to Long.valueOf

see #100