@@ -102,7 +102,7 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 			@RequestParam(value = "tinhTrangXuLy", required = false) String tinhTrangXuLy,
 			@RequestParam(value = "ketQuaTiepDan", required = false) String ketQuaTiepDan,
 			PersistentEntityResourceAssembler eass) {
-		Long coQuanQuanLyId = new Long(profileUtil.getCommonProfile(authorization).getAttribute("coQuanQuanLyId").toString());
+		Long coQuanQuanLyId = Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("coQuanQuanLyId").toString());
 		if (Utils.quyenValidate(profileUtil, authorization, QuyenEnum.SOTIEPCONGDAN_LIETKE) == null) {
 			return Utils.responseErrors(HttpStatus.FORBIDDEN, ApiErrorEnum.ROLE_FORBIDDEN.name(), ApiErrorEnum.ROLE_FORBIDDEN.getText());
 		}
@@ -148,7 +148,7 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 		if (soTiepCongDan != null && !soTiepCongDan.getCoQuanToChucTiepDans().isEmpty()) {
 			for (CoQuanToChucTiepDan coQuanToChucTiepDan : soTiepCongDan.getCoQuanToChucTiepDans()) {
 				Utils.save(repoCoQuanToChucTiepDan, coQuanToChucTiepDan,
-						new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+						Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 			}
 		}
 		Don don = repoDon.findOne(soTiepCongDan.getDon().getId());
@@ -184,11 +184,11 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 		}
 
 		ResponseEntity<Object> output = Utils.doSave(repo, soTiepCongDan,
-				new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()), eass,
+				Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()), eass,
 				HttpStatus.CREATED);
 		if (output.getStatusCode().equals(HttpStatus.CREATED)) {
 			Utils.save(repoDon, soTiepCongDan.getDon(),
-					new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+					Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 		}
 		return output;
 	}
@@ -207,7 +207,7 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 		soTiepCongDan.setId(id);
 		for (CoQuanToChucTiepDan coQuanToChucTiepDan : soTiepCongDan.getCoQuanToChucTiepDans()) {
 			Utils.save(repoCoQuanToChucTiepDan, coQuanToChucTiepDan,
-					new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+					Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 		}
 
 		if (soTiepCongDan.getDon() != null) {
@@ -239,11 +239,11 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 		}
 
 		ResponseEntity<Object> output = Utils.doSave(repo, soTiepCongDan,
-				new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()), eass,
+				Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()), eass,
 				HttpStatus.CREATED);
 		if (output.getStatusCode().equals(HttpStatus.CREATED)) {
 			Utils.save(repoDon, soTiepCongDan.getDon(),
-					new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+					Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 		}
 		return output;
 	}
@@ -274,11 +274,11 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 			int tongSoLuotTCD = don.getTongSoLuotTCD();
 			don.setTongSoLuotTCD(tongSoLuotTCD - 1);
 			Utils.save(repoDon, don,
-					new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+					Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 		}		
 		soTiepCongDan.setDaXoa(true);
 		Utils.save(repo, soTiepCongDan,
-				new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+				Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 		
 		return new ResponseEntity<>(HttpStatus.NO_CONTENT);
 	}
@@ -315,7 +315,7 @@ public class SoTiepCongDanController extends TttpController<SoTiepCongDan> {
 		}
 
 		Utils.save(repo, soTiepCongDan,
-				new Long(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
+				Long.valueOf(profileUtil.getCommonProfile(authorization).getAttribute("congChucId").toString()));
 		return new ResponseEntity<>(HttpStatus.NO_CONTENT);
 	}
 
